Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-19243

Fix timezone handling on Windows to report POSIX timezone names

    XMLWordPrintable

Details

    Description

      For JDBC/Node.js drivers at least, it is necessary to handle timezone information (system_time_zone, @session.time_zone) in the way that is independent from the underlying OS, and also POSIX locale names have to be supported. Currently, POSIX locale names are not accepted, and the server would report a rather unusable "Coordinated Universal Time".

      The task is to make Windows behave like the other OSes do wrt to timezone information.
      The mapping between Windows timezone names and POSIX is given by the "golden standard"

      CLDR data https://unicode.org/repos/cldr/trunk/common/supplemental/windowsZones.xml

      We can parse that to create map the names. It is also possible to find the DST setting and UTC offsets using Windows APIs GetTimezoneInformation etc.

      Attachments

        Issue Links

          Activity

            People

              wlad Vladislav Vaintroub
              wlad Vladislav Vaintroub
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.5d
                  0.5d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.