MDEV-19243 Fix timezone handling on Windows to report standard timezone names